--- a/14.1.md
+++ b/14.1.md
@@ -14,12 +14,20 @@ openssl req -x509 -new -key cert.key -days 3650 -out cert.crt \
 kubectl create secret tls domain-cert --cert=certs/cert.crt --key=certs/cert.key
 ```
 
+#### ответ
+
+![](14.1/1.png)
+
 ### Как просмотреть список секретов?
 
 ```
 kubectl get secrets
 kubectl get secret
 ```
+
+#### ответ
+
+![](14.1/2.png)
 
 ### Как просмотреть секрет?
 
@@ -28,12 +36,22 @@ kubectl get secret domain-cert
 kubectl describe secret domain-cert
 ```
 
+#### ответ
+
+![](14.1/3.png)
+
 ### Как получить информацию в формате YAML и/или JSON?
 
 ```
 kubectl get secret domain-cert -o yaml
 kubectl get secret domain-cert -o json
 ```
+
+#### ответ
+
+[](14.1/domain-cert.json)
+
+[](14.1/domain-cert.yaml)
 
 ### Как выгрузить секрет и сохранить его в файл?
 
@@ -53,6 +71,10 @@ kubectl delete secret domain-cert
 ```
 kubectl apply -f domain-cert.yml
 ```
+
+#### ответ
+
+![](14.1/4.png)
 
 ## Задача 2 (*): Работа с секретами внутри модуля
 
