--- a/14.1.md
+++ b/14.1.md
@@ -49,9 +49,9 @@ kubectl get secret domain-cert -o json
 
 #### ответ
 
-[](14.1/domain-cert.json)
+[domain-cert.json](14.1/domain-cert.json)
 
-[](14.1/domain-cert.yaml)
+[domain-cert.yaml](14.1/domain-cert.yaml)
 
 ### Как выгрузить секрет и сохранить его в файл?
 
