--- a/14.2.md
+++ b/14.2.md
@@ -8,10 +8,24 @@
 kubectl apply -f 14.2/vault-pod.yml
 ```
 
+#### Ответ
+![Alt text](14.2/1.png)
+
 Получить значение внутреннего IP пода
 
 ```
 kubectl get pod 14.2-netology-vault -o json | jq -c '.status.podIPs'
+```
+
+
+
+#### Ответ:
+
+![Alt text](14.2/2.png)
+
+```bash
+$ kubectl get pod 14.2-netology-vault -o json | jq -c '.status.podIPs'
+[{"ip":"10.244.0.4"}]
 ```
 
 Примечание: jq - утилита для работы с JSON в командной строке
@@ -28,6 +42,9 @@ kubectl run -i --tty fedora --image=fedora --restart=Never -- sh
 dnf -y install pip
 pip install hvac
 ```
+#### Ответ
+![Alt text](14.2/3.png)
+![Alt text](14.2/4.png)
 
 Запустить интепретатор Python и выполнить следующий код, предварительно
 поменяв IP и токен
@@ -35,7 +52,7 @@ pip install hvac
 ```
 import hvac
 client = hvac.Client(
-    url='http://10.10.133.71:8200',
+    url='http://10.244.0.4:8200',
     token='aiphohTaa0eeHei'
 )
 client.is_authenticated()
@@ -51,6 +68,10 @@ client.secrets.kv.v2.read_secret_version(
     path='hvac',
 )
 ```
+
+#### Ответ
+
+![Alt text](14.2/5.png)
 
 ## Задача 2 (*): Работа с секретами внутри модуля
 
