--- a/14.3.md
+++ b/14.3.md
@@ -12,12 +12,19 @@ kubectl create configmap nginx-config --from-file=nginx.conf
 kubectl create configmap domain --from-literal=name=netology.ru
 ```
 
+#### Ответ
+
+![Alt text](14.3/img/1.png)
+
 ### Как просмотреть список карт конфигураций?
 
 ```
 kubectl get configmaps
 kubectl get configmap
 ```
+
+#### Ответ
+![Alt text](14.3/img/2.png)
 
 ### Как просмотреть карту конфигурации?
 
@@ -26,6 +33,9 @@ kubectl get configmap nginx-config
 kubectl describe configmap domain
 ```
 
+#### Ответ
+![Alt text](14.3/img/3.png)
+
 ### Как получить информацию в формате YAML и/или JSON?
 
 ```
@@ -33,12 +43,20 @@ kubectl get configmap nginx-config -o yaml
 kubectl get configmap domain -o json
 ```
 
+#### Ответ
+![Alt text](14.3/img/4.png)
+
 ### Как выгрузить карту конфигурации и сохранить его в файл?
 
 ```
 kubectl get configmaps -o json > configmaps.json
 kubectl get configmap nginx-config -o yaml > nginx-config.yml
 ```
+
+#### Ответ
+
+[nginx-config.yml](14.3/nginx-config.yml)
+[configmaps.json](14.3/configmaps.json)
 
 ### Как удалить карту конфигурации?
 
@@ -52,6 +70,8 @@ kubectl delete configmap nginx-config
 kubectl apply -f nginx-config.yml
 ```
 
+#### Ответ
+![Alt text](14.3/img/6.png)
 ## Задача 2 (*): Работа с картами конфигураций внутри модуля
 
 Выбрать любимый образ контейнера, подключить карты конфигураций и проверить
