--- a/14.3.md
+++ b/14.3.md
@@ -78,6 +78,11 @@ kubectl apply -f nginx-config.yml
 их доступность как в виде переменных окружения, так и в виде примонтированного
 тома
 
+
+#### Ответ
+
+Запустил представленный файл [myapp](14.3/myapp-pod.yml), в логе файла есть вывод конфигурации nginx [log](14.3/netology-14.3.log)
+
 ---
 
 ### Как оформить ДЗ?
