--- a/14.4.md
+++ b/14.4.md
@@ -18,6 +18,10 @@ kubectl get serviceaccounts
 kubectl get serviceaccount
 ```
 
+#### Ответ:
+
+![Alt text](14.4/1.png)
+
 ### Как получить информацию в формате YAML и/или JSON?
 
 ```
@@ -25,12 +29,20 @@ kubectl get serviceaccount netology -o yaml
 kubectl get serviceaccount default -o json
 ```
 
+#### Ответ:
+![Alt text](14.4/2.png)
+
 ### Как выгрузить сервис-акаунты и сохранить его в файл?
 
 ```
 kubectl get serviceaccounts -o json > serviceaccounts.json
 kubectl get serviceaccount netology -o yaml > netology.yml
 ```
+
+#### Ответ:
+[serviceaccounts.json](14.4/serviceaccounts.json)
+
+[netology.yml](14.4/netology.yml)
 
 ### Как удалить сервис-акаунт?
 
@@ -43,6 +55,10 @@ kubectl delete serviceaccount netology
 ```
 kubectl apply -f netology.yml
 ```
+
+#### Ответ:
+![Alt text](14.4/3.png)
+
 
 ## Задача 2 (*): Работа с сервис-акаунтами внутри модуля
 
@@ -86,6 +102,10 @@ cat ~/.kube/config
 ```
 kubectl cluster-info
 ```
+
+#### Ответ:
+
+[логи](14.4/fedora.log)
 
 ---
 
