--- a/14.5.md
+++ b/14.5.md
@@ -15,6 +15,10 @@ kubectl logs security-context-demo
 uid=1000 gid=3000 groups=3000
 ```
 
+#### Ответ:
+
+![Alt text](14.5/1.png)
+
 ## Задача 2 (*): Рассмотрите пример 14.5/example-network-policy.yml
 
 Создайте два модуля. Для первого модуля разрешите доступ к внешнему миру
