--- a/14.5.md
+++ b/14.5.md
@@ -25,6 +25,12 @@ uid=1000 gid=3000 groups=3000
 и ко второму контейнеру. Для второго модуля разрешите связь только с
 первым контейнером. Проверьте корректность настроек.
 
+### Ответ:
+
+[Все манифесты](14.5/) но не получается заблокировать доступ со второго модуля
+
+![alt](14.5/2.png)
+
 ---
 
 ### Как оформить ДЗ?
