--- a/14.5.md
+++ b/14.5.md
@@ -27,10 +27,19 @@ uid=1000 gid=3000 groups=3000
 
 ### Ответ:
 
-[Все манифесты](14.5/) но не получается заблокировать доступ со второго модуля
+[Все манифесты](14.5/test_ex) 
 
-![alt](14.5/2.png)
+Сделал 2 приложения, [first](14.5/test_ex/first.yaml) и [second](14.5/test_ex/second.yaml), сервисы к ним - [services](14.5/test_ex/services.yaml), политики - [politics](14.5/test_ex/polices.yaml).
+В итоге если пробовать зайти в под, то доступ есть и с первого приложения и со второго
+![img.png](14.5/3.png)
+![img.png](14.5/4.png)
 
+Разобрался:
+
+Не работает в миникубе, в облаке доступ правильный:
+
+![img.png](14.5/5.png)
+![img.png](14.5/6.png)
 ---
 
 ### Как оформить ДЗ?
